<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_undo"
        android:title="@string/undo"
        android:icon="@drawable/ic_action_undo"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_restart"
        android:title="@string/restart"
        android:icon="@drawable/ic_action_restart"
        app:showAsAction="never" />

    <item android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="never"/>

</menu>