...
            <ScrollView
                android:id="@+id/tableScroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/tableBody"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/table_scroll_bottom_padding"
                    android:clipToPadding="false"
                    android:background="@color/colorTableHeader"
                    android:elevation="2dp">
...
